# RouteOPT

./: .gitignore  README.md  constraints.example.yaml  pyproject.toml
.github/workflows/: python-ci.yml
examples/: constraints.euclidean.yaml  sample.geojson
planning/: PLAN_v3_1.md
routeopt/: cli.py
routeopt/core/: config.py  ingest.py  output.py  routing.py  solver.py  tasks.py
routeopt/models/: constraints.py  network.py
routeopt/utils/: geo.py
tests/: test_constraints_load.py  test_geojson_ingest.py  test_ingest_oneway_coerce.py  test_lane_split.py  test_loopback_routing.py  test_solver_constraints.py
