[project]
name = "routeopt"
version = "0.1.0"
description = "Roadway measurement route optimizer (nightly routing plans)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "shapely>=2.0",
  "networkx>=3.2",
]

[project.scripts]
routeopt = "routeopt.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[project.optional-dependencies]
osm = [
  'osmnx>=1.9.4',
  'geopandas>=0.14',
  'pyproj>=3.6',
]
dev = [
  'pytest>=8.0',
  'ruff>=0.6.0'
]


[tool.ruff.lint]
select = ['E','F','I']


[tool.setuptools]
packages = {find = {include = ['routeopt*'], exclude = ['planning*', 'tests*']}}

